# wsvocabulary

./: CMakeLists.txt  README.md
CMake/: CPackConfig.cmake  FindPackages.cmake
wsserver/: CMakeLists.txt  wsserver.cpp
wsvistaclient/: CMakeLists.txt
wsvistaclient/configfiles/: display_desktop.ini  interaction_desktop.ini  vista.ini
wsvistaclient/configfiles/xml/: keyboard_standardinput.xml  mouse_trackball.xml
wsvistaclient/source/: ActivationCallback.h  App.cpp  App.h  EventHandler.cpp  EventHandler.h  _SourceFiles.cmake  main.cpp
wsvoc/: CMakeLists.txt  vocabulary.cpp  vocabulary.h
wsvoc/detail/: vector3d.fbs
